add categories and cart

--- a/admin/static/css/style.css
+++ b/admin/static/css/style.css
@@ -82,11 +82,24 @@ a:hover { color: #e84d07; }
     border-bottom: 1px solid #b1afaf;
     padding: 10px;
 }
+.tiny_products .name_block{
+    float: left;
+    width: 650px;
+}
+.tiny_categories .category:nth-child(odd),
 .tiny_products .product:nth-child(odd){
     background: #f5f5f5;
 }
+.tiny_categories .category:nth-child(even),
 .tiny_products .product:nth-child(even){
     background: #e4e4e4;
+}
+.tiny_categories .category_inner{
+    border-bottom: 1px solid #b1afaf;
+    padding: 10px 0;
+}
+.tiny_categories .category_level_1 .category_inner{
+    padding-right: 15px;
 }
 .tiny_products .image{
     width: 70px;
@@ -137,10 +150,6 @@ a:hover { color: #e84d07; }
     line-height: 25px;
     font-weight: bold;
     font-size: 14px;
-    width: 650px;
-}
-.reviews .name_block{
-    float: left;
     width: 650px;
 }
 .reviews .text{
